--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
         font-size: 27px;
         line-height: 25px;
     }
-    #navbutton{
+    .red-button{
         width: 191.8px;
         height: 62px;
         left: 1463.72px;
@@ -30,41 +30,87 @@
         box-shadow: 1px 1px 10px rgba(241, 173, 180, 0.5), inset 1px 1px 10px rgba(241, 173, 180, 0.5);
         border-radius: 10px;
     }
+    #Ghackstitle{
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 100px;
+      line-height: 122px;
+    }
+    #Ghacksdate{
+      font-family: 'League Spartan';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 25px;
+      line-height: 28px;
+    }
+    #Ghacksrdy{
+      font-family: 'League Spartan';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 40px;
+      line-height: 41px;
+      color: #640D14;
+      margin-top: 70px;
+    }
+    }
   </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm" style="background: rgba(193, 193, 193, 0.5);">
-    <div class="container col-sm-1">
-        <a class="navbar-brand" href="#">
-            <img src="logo.png" alt="Avatar Logo" class="rounded-pill" style ="width:80px;height: 80px;margin-left:50px;left: 64px;"> 
-        </a>
-    </div>
-    <div class="container col-sm-7" >
-        <ul class="navbar-nav ">
-            <li class="nav-item" style = "margin-left:100px;">
-              <a class="nav-link navbartext" href="#">Home</a>
-            </li>
-            <li class="nav-item" style = "margin-left:150px;">
-              <a class="nav-link navbartext" href="#">Track</a>
-            </li>
-            <li class="nav-item" style = "margin-left:150px;">
-              <a class="nav-link navbartext" href="#">Prizes</a>
-            </li>
-            <li class="nav-item" style = "margin-left:150px;">
-                <a class="nav-link navbartext" href="#">FAQ</a>
-            </li>
-            <li class="nav-item" style = "margin-left:150px;">
-                <a class="nav-link navbartext" href="#">Sponsors</a>
-            </li>
-        </ul>
-    </div>
-    <div class="container col-sm-2">
-        <button type="button" style= "margin-left: 130px" class="btn" id="navbutton">Apply Now!</button>
-    </div>
-    <div class="container col-sm-2">
-            <img src="banner.png" alt="Avatar Logo" style ="margin-top:125px;width:180.47px;height: 240px;margin-left:90px;position: absolute;"> 
-    </div>
-</nav>
+  <div class="container-fluid" style ="padding:0px;position: fixed;">
+    <img src="mainbg.png" alt="Avatar Logo" style="width:100%;height:100%;">
+  </div>
+  <nav class="navbar navbar-expand" style="background: rgba(193, 193, 193, 0.5);">
+        <div class="container col-sm-1">
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="Avatar Logo" class="rounded-pill" style ="margin-left:80px;width:80px;height: 80px;"> 
+            </a>
+        </div>
+        <div class="container col-sm-7" >
+            <ul class="navbar-nav ">
+                <li class="nav-item" style = "margin-left:25%;">
+                  <a class="nav-link navbartext" href="#">Home</a>
+                </li>
+                <li class="nav-item" style = "margin-left:25%;">
+                  <a class="nav-link navbartext" href="#">Track</a>
+                </li>
+                <li class="nav-item" style = "margin-left:25%;">
+                  <a class="nav-link navbartext" href="#">Prizes</a>
+                </li>
+                <li class="nav-item" style = "margin-left:25%;">
+                    <a class="nav-link navbartext" href="#">FAQ</a>
+                </li>
+                <li class="nav-item" style = "margin-left:25%;">
+                    <a class="nav-link navbartext" href="#">Sponsors</a>
+                </li>
+            </ul>
+        </div>
+        <div class="container col-sm-2">
+            <button type="button" style= "margin-left: 25%" class="btn red-button">Apply Now!</button>
+        </div>
+        <div class="container col-sm-2">
+                <img src="banner.png" alt="Avatar Logo" style ="margin-top:125px;width:180.47px;height: 240px;margin-left:90px;position: absolute;"> 
+        </div>
+  </nav>
+  <div class="container-fluid col-sm-4" style="margin-top:100px;margin-left:100px;position:absolute">
+    <h1 id="Ghackstitle">GARUDA<br>HACKS 4.0</h1>
+    <p id="Ghacksdate">26-29 August 2023</p>
+    <p id="Ghacksrdy">Ready to Build the Future?</p>
+    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;">
+      <img src="participant.svg" style="margin-right:6px;">
+      Register as Participant
+    </button>
+    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;">
+      <img src="mentor.svg" style="margin-right:6px;">
+      Register as Member
+    </button>
+    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;">
+      <img src="sponsor.svg" style="position:absolute;margin-right:6px;left:43px;top:593px;">
+      <img src="heart.svg" style="position:absolute;margin-right:6px;left:35px">
+      
+      Join us as a Sponsor
+    </button>
+  </div>
 
 </body>
 </html>
