--- a/test.html
+++ b/test.html
@@ -8,19 +8,32 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <style>
+    @font-face{
+      font-family: League-Spartan-Bold;
+      src: url('static/LeagueSpartan-Bold.ttf') format('truetype');
+    }
+    @font-face{
+      font-family: League-Spartan-Regular;
+      src: url('static/LeagueSpartan-Regular.ttf') format('truetype');
+    }
+    @font-face{
+      font-family: Montserrat;
+      src: url('static/Montserrat-Bold.ttf') format('truetype');
+    }
     .navbartext{
-        font-family: 'League Spartan';
+        font-family: League-Spartan-Regular;
         font-style: normal;
         font-weight: 700;
         font-size: 27px;
         line-height: 25px;
+        color: #2E2E2E;
     }
     .red-button{
         width: 191.8px;
         height: 62px;
         left: 1463.72px;
         top: 11px;
-        font-family: 'League Spartan';
+        font-family: League-Spartan-Regular;
         font-style: normal;
         font-weight: 700;
         font-size: 27px;
@@ -30,37 +43,34 @@
         box-shadow: 1px 1px 10px rgba(241, 173, 180, 0.5), inset 1px 1px 10px rgba(241, 173, 180, 0.5);
         border-radius: 10px;
     }
-    #Ghackstitle{
-      font-family: 'Montserrat';
-      font-style: normal;
-      font-weight: 700;
+    #Ghackstitle{ 
+      font-family: Montserrat;
+      font-weight: bold;
       font-size: 100px;
-      line-height: 122px;
     }
     #Ghacksdate{
-      font-family: 'League Spartan';
+      font-family: League-Spartan-Bold;
       font-style: normal;
-      font-weight: 700;
+      font-weight: 1000;
       font-size: 25px;
-      line-height: 28px;
+      color: #424242;
     }
     #Ghacksrdy{
-      font-family: 'League Spartan';
+      font-family: League-Spartan-Bold;
       font-style: normal;
-      font-weight: 700;
+      font-weight: 1000;
       font-size: 40px;
-      line-height: 41px;
       color: #640D14;
-      margin-top: 70px;
+      margin-top: 30px;
     }
     }
   </style>
 </head>
 <body>
-  <div class="container-fluid" style ="padding:0px;position: fixed;">
-    <img src="mainbg.png" alt="Avatar Logo" style="width:100%;height:100%;">
+  <div class="container-fluid" style ="padding:0px;position: absolute;overflow-x:hidden">
+    <img src="landingpage.png" alt="Avatar Logo" style="min-width:100%;">
   </div>
-  <nav class="navbar navbar-expand" style="background: rgba(193, 193, 193, 0.5);">
+  <nav class="navbar navbar-expand fixed-top" style="background: rgba(193, 193, 193, 0.5);">
         <div class="container col-sm-1">
             <a class="navbar-brand" href="#">
                 <img src="logo.png" alt="Avatar Logo" class="rounded-pill" style ="margin-left:80px;width:80px;height: 80px;"> 
@@ -89,28 +99,30 @@
             <button type="button" style= "margin-left: 25%" class="btn red-button">Apply Now!</button>
         </div>
         <div class="container col-sm-2">
-                <img src="banner.png" alt="Avatar Logo" style ="margin-top:125px;width:180.47px;height: 240px;margin-left:90px;position: absolute;"> 
+                <img src="banner.png" alt="Avatar Logo" style ="margin-top:175px;width:250px;height: 280px;margin-left:20px;position: absolute;"> 
         </div>
   </nav>
-  <div class="container-fluid col-sm-4" style="margin-top:100px;margin-left:100px;position:absolute">
+  <div class="container-fluid col-sm-4" style="margin-top:200px;margin-left:100px;position:absolute">
     <h1 id="Ghackstitle">GARUDA<br>HACKS 4.0</h1>
     <p id="Ghacksdate">26-29 August 2023</p>
     <p id="Ghacksrdy">Ready to Build the Future?</p>
-    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;">
+    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px">
       <img src="participant.svg" style="margin-right:6px;">
       Register as Participant
     </button>
-    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;">
+    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px">
       <img src="mentor.svg" style="margin-right:6px;">
       Register as Member
     </button>
-    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;">
-      <img src="sponsor.svg" style="position:absolute;margin-right:6px;left:43px;top:593px;">
+    <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px  ">
+      <img src="sponsor.svg" style="position:absolute;margin-right:6px;left:43px;top:596px;">
       <img src="heart.svg" style="position:absolute;margin-right:6px;left:35px">
       
       Join us as a Sponsor
     </button>
   </div>
-
+  <div class="container-fluid" style ="top:1080px;padding:0px;position: relative;overflow-x: hidden">
+    <img src="tile1.png" alt="Avatar Logo" style="min-width:100%;">
+  </div>
 </body>
 </html>
