shortened indo translations

--- a/langswitch.html
+++ b/langswitch.html
@@ -589,7 +589,7 @@
         <p style="margin-top: 12px;" lang="id">Apa babak finalis?</p>
         <div class="FAQ-content">
           <p lang="en">The top 3 hacks for each project track (excluding pitch competition tracks) will qualify to the finalist round where each team takes another 48 hours to enhance their hacks and prepare a slide deck that they will pitch live on the Demo Day. More info included in handbook.</p>
-          <p lang="id">3 hacks teratas untuk setiap project track (tidak termasuk pitch competition track) akan IOIOS ke babak finalis di mana setiap tim membutuhkan waktu 48 jam lagi untuk menyempurnakan retasan mereka dan menyiapkan dek slide yang akan mereka lempar secara langsung pada Hari Demo. Info lebih lanjut disertakan dalam buku pegangan.</p>
+          <p lang="id">3 hacks terbaik per project track (tidak termasuk pitch competition track) akan lanjut ke babak finalis, dan diberikan waktu 48 jam lagi untuk menyiapkan dek slide yang akan mereka berpresentasi secara langsung pada Hari Demo. Info lebih lanjut disertakan dalam buku pegangan.</p>
         </div>
       </button>
     </div>
