--- a/langswitch.html
+++ b/langswitch.html
@@ -581,7 +581,7 @@
         <p style="margin-top: 12px;" lang="id">Apakah saya harus tahu kode?</p>
         <div class="FAQ-content">
           <p lang="en">Nope! You can learn along the way or team up with experienced programmers. Skills such as designing, business planning, and etc are all going to impact the projects in various ways! Also, check our new pitch competition tracks!</p>
-          <p lang="id">Tldak! Anda dapat belajar sambil jalan atau bekerja sama dengan programmer berpengalaman. Keterampilan seperti mendesain, perencanaan bisnis, dan lain-lain semuanya akan berdampak pada proyek dengan berbagai cara! Juga, periksa trek kompetisi nada baru kami!</p>
+          <p lang="id">Tidak! Anda bisa belajar sambil jalan atau bekerja dengan programmer berpengalaman. Keterampilan seperti mendesain, perencanaan bisnis, dan lain-lain semuanya akan berdampak pada proyek dengan berbagai cara! Juga, periksa trek kompetisi nada baru kami!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
