--- a/langswitch.html
+++ b/langswitch.html
@@ -585,11 +585,11 @@
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
-        <p style="margin-top: 12px;" lang="en">What is the finalist round?</p>
-        <p style="margin-top: 12px;" lang="id">Apa babak finalis?</p>
+        <p style="margin-top: 12px;" lang="en">How much does it cost?</p>
+        <p style="margin-top: 12px;" lang="id">Berapa harga berpartisipasi?</p>
         <div class="FAQ-content">
-          <p lang="en">The top 3 hacks for each project track (excluding pitch competition tracks) will qualify to the finalist round where each team takes another 48 hours to enhance their hacks and prepare a slide deck that they will pitch live on the Demo Day. More info included in handbook.</p>
-          <p lang="id">3 hacks terbaik per project track (tidak termasuk pitch competition track) akan lanjut ke babak finalis, dan diberikan waktu 48 jam lagi untuk menyiapkan dek slide yang akan mereka berpresentasi secara langsung pada Hari Demo. Info lebih lanjut disertakan dalam buku pegangan.</p>
+          <p lang="en">Nothing at all!</p>
+          <p lang="id">Gratis!</p>
         </div>
       </button>
     </div>
@@ -603,27 +603,11 @@
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
-        <p style="margin-top: 12px;" lang="en">How much does it cost?</p>
-        <p style="margin-top: 12px;" lang="id">Berapa harga berpartisipasi?</p>
-        <div class="FAQ-content">
-          <p lang="en">Nothing at all!</p>
-          <p lang="id">Gratis!</p>
-        </div>
-      </button>
-      <button type="button" class=" FAQ-button" >
         <p style="margin-top: 12px;" lang="en">How do we submit our projects?</p>
         <p style="margin-top: 12px;" lang="id">Bagaimana cara kirim proyek saya?</p>
         <div class="FAQ-content">
           <p lang="en">You must submit your project's video demonstration through Devpost. Additionally, it is optional for you to submit your project's live website too.</p>
           <p lang="id">Anda harus mengirimkan demonstrasi video proyek Anda melalui Devpost. Selain itu, Anda juga opsional untuk mengirimkan situs web langsung proyek Anda.</p>
-        </div>
-      </button>
-      <button type="button" class=" FAQ-button" >
-        <p style="margin-top: 12px;" lang="en">What can I make?</p>
-        <p style="margin-top: 12px;" lang="id">Apa yang bisa saya buat?</p>
-        <div class="FAQ-content">
-          <p lang="en">We welcome all software, hardware hacks that align with our tracks, as well as pitch videos for our pitch competition tracks.</p>
-          <p lang="id">Kami menerima semua perangkat lunak, peretasan perangkat keras yang selaras dengan trek kami, serta video pitch untuk trek kompetisi pitch kami.</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
@@ -634,7 +618,24 @@
           <p lang="id">Untuk masing-masing dari 3 trek proyek, kami memiliki trek tanpa kode tambahan sebagai alternatif di mana peserta mengirimkan video pitch 5 menit, seperti kompetisi pitch. Satu proyek tidak dapat memenuhi syarat untuk trek kompetisi pitch dan trek reguler.</p>
         </div>
       </button>
+      <button type="button" class=" FAQ-button" >
+        <p style="margin-top: 12px;" lang="en">What is the finalist round?</p>
+        <p style="margin-top: 12px;" lang="id">Apa babak finalis?</p>
+        <div class="FAQ-content">
+          <p lang="en">The top 3 hacks for each project track (excluding pitch competition tracks) will qualify to the finalist round where each team takes another 48 hours to enhance their hacks and prepare a slide deck that they will pitch live on the Demo Day. More info included in handbook.</p>
+          <p lang="id">Untuk masing-masing dari 3 trek proyek, kami memiliki trek tanpa kode tambahan sebagai alternatif di mana peserta mengirimkan video pitch 5 menit, seperti kompetisi pitch. Satu proyek tidak dapat memenuhi syarat untuk trek kompetisi pitch dan trek reguler.</p>
+        </div>
+      </button>
+      <button type="button" class=" FAQ-button" >
+        <p style="margin-top: 12px;" lang="en">What can I make?</p>
+        <p style="margin-top: 12px;" lang="id">Apa yang bisa saya buat?</p>
+        <div class="FAQ-content">
+          <p lang="en">We welcome all software, hardware hacks that align with our tracks, as well as pitch videos for our pitch competition tracks.</p>
+          <p lang="id">Kami menerima semua perangkat lunak, peretasan perangkat keras yang selaras dengan trek kami, serta video pitch untuk trek kompetisi pitch.</p>
+        </div>
+      </button>
     </div>
   </div>
 </body>
 </html>
+
