--- a/langswitch.html
+++ b/langswitch.html
@@ -493,7 +493,7 @@
      </div>
         </div>    
     <div style="height:625px"></div>
-    <div class="flex-container" style="padding:0;position:relative;top:0;margin-right: auto;margin-left:auto;width:90vw;background: rgba(217, 217, 217, 0.6);border-radius: 20px;">
+    <div class="flex-container" style="position:relative;margin-right: auto;margin-left: auto;margin-top:40px;width: 1782px;height: 137px;background: rgba(217, 217, 217, 0.6);border-radius: 20px;">
         <p id="project-FAQ" style="display:inline-block;" lang="en">
             Each of the following 3 tracks will have no-code alternatives, the pitch competition tracks, where participants submit a 5-minute pitch video.<br>
             <span style="margin-left:35px;">Check out</span>
