Added airtable link to [Apply Now] button

--- a/langswitch.html
+++ b/langswitch.html
@@ -291,8 +291,10 @@
               </ul>
         </div>
         <div class="container-fluid col-sm-2">
-            <button type="button" class="btn red-button" lang="en">Apply Now!</button>
-            <button type="button" class="btn red-button" lang="id">Daftar Sekarang!</button>
+            <a href="https://airtable.com/shrrNZAo4mECqKid0" target="_blank">
+              <button type="button" class="btn red-button" lang="en">Apply Now!</button>
+              <button type="button" class="btn red-button" lang="id">Daftar Sekarang!</button>
+            </a>
         </div>
         <div class="container-fluid col-sm-2">
                 <img src="banner.png" alt="Avatar Logo" style ="margin-top:175px;width:250px;height: 280px;position: absolute;"> 
