Indo spelling error corrected

--- a/langswitch.html
+++ b/langswitch.html
@@ -505,7 +505,7 @@
             for more info!
         </p>
         <p id="project-FAQ" style="display:inline-block;" lang="id">
-          Masing-masing dari 3 trek berikut akan memiliki alternatif tanpa kode, trek kometisi pitch, di mana peserta mengirimkan video pitch berdurasi 5 menit.<br>
+          Masing-masing dari 3 trek berikut akan memiliki alternatif tanpa kode, trek kompetisi pitch, di mana peserta mengirimkan video pitch berdurasi 5 menit.<br>
             <span style="margin-left:35px;">Lihat</span>
             <a href="#FAQ" style="color:black;">bagian FAQ</a>
             untuk info lebih lanjut!
