Changed Tracks to new tracks, old tracks commented out below. ICONS of tracks not changed yet

--- a/langswitch.html
+++ b/langswitch.html
@@ -360,6 +360,170 @@
     <div class="row">
       <div class="col-sm-4 flex-container">
         <div class="project-track-button" style="z-index: 3;">
+          <p class="project-track-text">SUSTAINABILITY</p>
+          <img src="beating-heart.svg" style="margin-left:5%;">
+        </div>
+        <div class="project-track-header" style="z-index: 2;">
+          <p class="project-header-info" style="display:inline-block;">
+              SUSTAINABILITY
+              <img src="beating-heart.svg" style="width:35px;display:inline-block;margin-left:5px;position: relative;">
+          </p>
+      </div>
+      <div class="project-track-info" style="z-index: 1;" lang="en">
+          <p class="project-info-text" style="margin-top:100px">
+            Whether your approach is preventive or innovative interventions, what you create can save and improve future generations.
+          </p>
+          <p class=" project-info-text project-track-question">
+            How do we:
+          </p>
+          <p class=" project-info-text project-track-dot">
+            Educate the public on the importance on environmental conservation?
+          </p>
+          <p class=" project-info-text project-track-dot">
+            Successfully facilitate top-down and grassroots efforts to empower people Indonesians, regardless of creed, ethnicity or socioeconomic status, to conserve the environment?
+          </p>
+          <p class=" project-info-text project-track-dot">
+            Facilitate the creation of a green and sustainable green economy?
+          </p>
+      </div>
+      <div class="project-track-info" style="z-index: 1;" lang="id">
+        <p class="project-info-text" style="margin-top:100px">
+          Apakah solusi Anda intervensi preventif atau innovatif, apa yang Anda buat dapat memperbaiki generasi mendatang
+        </p>
+        <p class=" project-info-text project-track-question">
+          Bagaimana kita:
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Mendidik masyarakat tentang pentingnya pelestarian lingkungan?
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Berhasil memfasilitasi upaya top-down dan akar rumput untuk memberdayakan masyarakat Indonesia, terlepas dari kepercayaan, etnis atau status sosial ekonomi, untuk melestarikan lingkungan?
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Memfasilitasi terciptanya ekonomi yang hijau dan berkelanjutan?
+        </p>
+    </div>
+    </div>
+    <div class="col-sm-4 flex-container">
+      <div class="project-track-button" style="z-index:3;">
+        <p class="project-track-text">FUTURE OF<br>WORK</p>
+        <img src="scales.svg" style="margin-left:5%;">
+      </div> 
+      <div class="project-track-header" style="z-index: 2;">
+          <p class="project-header-info" style="display:inline-block;">
+              FUTURE OF WORK
+              <img src="scales.svg" style="width:35px;display:inline-block;margin-left:5px;position: relative;">
+          </p>
+      </div>
+      <div class="project-track-info" style="z-index: 1;" lang="en">
+            <p class="project-info-text" style="margin-top:100px">
+              We believe that each one of your solutions can create important developments in both the tech and traditional workspace
+            </p>
+            <p class=" project-info-text project-track-question">
+              How do we:
+            </p>
+            <p class=" project-info-text project-track-dot">
+              Leverage advancements in AI, automation, and the cloud to add value to sectors ripe for technological disruption?
+            </p>
+            <p class=" project-info-text project-track-dot">
+              Provide upskilling and reskilling opportunities for our workforce to adapt to the changing workplace environment?
+            </p>
+            <p class=" project-info-text project-track-dot">
+              Transform workplaces to become happier, safer, and more equitable environments?
+            </p>
+      </div>
+      <div class="project-track-info" style="z-index: 1;" lang="id">
+        <p class="project-info-text" style="margin-top:100px">
+          Kami percaya bahwa setiap solusi Anda dapat menciptakan perkembangan penting baik di ruang kerja teknologi maupun tradisional
+        </p>
+        <p class=" project-info-text project-track-question">
+          Bagaimana kita:
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Memanfaatkan AI, otomasi, dan cloud untuk mengembangkan sektor yang siap menghadapi gangguan teknologi?
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Menyediakan peningkatan bagi tenaga kerja untuk beradaptasi dengan lingkungan kerja yang berubah?
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Mengubah lingkungan kerja menjadi lebih bahagia, lebih aman, dan lebih adil?
+        </p>
+  </div>
+      </div>
+    <div class="col-sm-4 flex-container">
+      <div class="project-track-button" style="z-index:3;">
+        <p class="project-track-text">YOUTH<br>EMPOWERMENT</p>
+        <img src="rural-graph.svg" style="margin-left:5%;">
+      </div>
+      <div class="project-track-header" style="z-index: 2;">
+          <p class="project-header-info" style="display:inline-block;">
+              YOUTH EMPOWERMENT
+              <img src="rural-graph.svg" style="width:35px;display:inline-block;margin-left:5px;position: relative;">
+          </p>
+      </div> 
+      <div class="project-track-info" style="z-index: 1;" lang="en">
+            <p class="project-info-text" style="margin-top:100px">
+              Inspiring and enabling our young innovators to accomplish greater things
+            </p>
+            <p class=" project-info-text project-track-question">
+              How do we:
+            </p>
+            <p class=" project-info-text project-track-dot">
+              Provide communities for our youth to interact and socialize with each other?
+            </p>
+            <p class=" project-info-text project-track-dot">
+              Facilitate skill development opportunities for our youth to learn from others and each other to prepare them to enter society and the workforce?
+            </p>
+            <p class=" project-info-text project-track-dot">
+              Create a channel for our youth to ideate and iterate on their ideas on how to improve their own societies?
+            </p>
+       </div>
+       <div class="project-track-info" style="z-index: 1;" lang="id">
+        <p class="project-info-text" style="margin-top:100px">
+          Menginspirasi dan memungkinkan inovator muda kita untuk mencapai hal-hal yang lebih besar
+        </p>
+        <p class=" project-info-text project-track-question">
+          Bagaimana kita:
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Menyediakan komunitas remaja untuk berinteraksi dan bersosialisasi satu sama lain?
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Memfasilitasi pengembangan bagi kaum muda untuk belajar dari satu sama lain untuk mempersiapkan mereka memasuki masyarakat?
+        </p>
+        <p class=" project-info-text project-track-dot">
+          Membuat saluran bagi kaum muda untuk mengidealkan ide-ide tentang meningkatkan masyarakat?
+        </p>
+   </div>
+      </div>    
+  <div style="height:625px"></div>
+  <div class="flex-container" style="position:relative;margin-right: auto;margin-left: auto;margin-top:40px;width: 1782px;height: 137px;background: rgba(217, 217, 217, 0.6);border-radius: 20px;">
+      <p id="project-FAQ" style="display:inline-block;" lang="en">
+          Each of the following 3 tracks will have no-code alternatives, the pitch competition tracks, where participants submit a 5-minute pitch video.<br>
+          <span style="margin-left:35px;">Check out</span>
+          <a href="#FAQ" style="color:black;">FAQ Section</a>
+          for more info!
+      </p>
+      <p id="project-FAQ" style="display:inline-block;" lang="id">
+        Masing-masing dari 3 trek berikut akan memiliki alternatif tanpa kode, trek kompetisi pitch, di mana peserta mengirimkan video pitch berdurasi 5 menit.<br>
+          <span style="margin-left:35px;">Lihat</span>
+          <a href="#FAQ" style="color:black;">bagian FAQ</a>
+          untuk info lebih lanjut!
+      </p>
+  </div>
+</div>
+</div>
+
+
+<!-- Project Track OLD
+          <div class="container-fluid" style ="padding:0px;position: relative;overflow-x: visible">
+    <img src="tile1.png" alt="Avatar Logo" style="min-width:100%;">
+  </div>
+  <div id="project-track" class="container-fluid" style="top:1200px;position:absolute;">
+    <h1 id="heading-font">Choose Your Project Track</h1>
+    <div class="row">
+      <div class="col-sm-4 flex-container">
+        <div class="project-track-button" style="z-index: 3;">
           <p class="project-track-text">HEALTH</p>
           <img src="beating-heart.svg" style="margin-left:5%;">
         </div>
@@ -513,7 +677,7 @@
     </div>
   </div>
   </div>
- 
+-->
 
   <!-- Prize Pool -->
   <div class="container-fluid" style ="padding:0px;position: relative;overflow-x: visible;z-index:1 ">
