Modified FAQ, INCOMPLETE, still need [How will projects be judged] to replace [What are the pitch tracks], but Notion incomplete

--- a/langswitch.html
+++ b/langswitch.html
@@ -582,16 +582,24 @@
         <p class="FAQ-title" lang="en">What is a hackathon?</p>
         <p class="FAQ-title" lang="id">Apa itu hackathon?</p>
         <div class="FAQ-content">
-          <p lang="en">A hackathon is a programming competition in which competitors use technology to build innovative projects within 48 hours. There will be opportunities to win cool prizes, learn from our key-note speakers, and network with our sponsors.</p>
-          <p lang="id">Hackathon adalah kompetisi pemrograman di mana para pesaing menggunakan teknologi untuk membangun proyek inovatif dalam waktu 48 jam. Akan ada peluang untuk memenangkan hadiah keren, belajar dari pembicara utama kami, dan berjejaring dengan sponsor kami.</p>
+          <p lang="en">A hackathon is a programming competition in which competitors use technology to build innovative projects within 36 hours. There will be opportunities to win cool prizes, learn from our key-note speakers, and network with our sponsors.</p>
+          <p lang="id">Hackathon adalah kompetisi pemrograman di mana para pesaing menggunakan teknologi untuk membangun proyek inovatif dalam waktu 36 jam. Akan ada peluang untuk memenangkan hadiah keren, belajar dari pembicara utama kami, dan berjejaring dengan sponsor kami.</p>
+        </div>
+      </button>
+      <button type="button" class=" FAQ-button" >
+        <p class="FAQ-title" lang="en">What is different about Garuda Hacks 4.0?</p>
+        <p class="FAQ-title" lang="id">Apa bedanya dengan Garuda Hacks 4.0?</p>
+        <div class="FAQ-content">
+          <p lang="en">Garuda Hacks 4.0 will merge two of our core events (hackathons and career development events) into one event. Also, as we are emerging from COVID-19, the event will be held offline in Indonesia!</p>
+          <p lang="id">Garuda Hacks 4.0 akan menggabungkan dua acara inti kami (hackathon dan acara pengembangan karir) menjadi satu acara. Selain itu, seiring dengan merebaknya COVID-19, acara ini akan diadakan secara offline di Indonesia!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">Where will it be hosted?</p>
         <p class="FAQ-title" lang="id">Di mana acara akan diadakan?</p>
         <div class="FAQ-content">
-          <p lang="en">Garuda Hacks 3.0 will be hosted on August 26-28 2022, completely virtually. All you need is to create a Discord account to communicate with our Garuda Hacks community.</p>
-          <p lang="id">Garuda Hacks 3.0 akan diselenggarakan pada 26-28 Agustus 2022, sepenuhnya secara virtual. Yang Anda butuhkan hanyalah membuat akun Discord berkomunikasi dengan komunitas Garuda Hacks kami.</p>
+          <p lang="en">Garuda Hacks 4.0 will be hosted on July 21-23 2023 in Jakarta, Indonesia. We will provide access to a Discord channel for participants to get in touch with each other approximately one month prior to the event</p>
+          <p lang="id">Garuda Hacks 4.0 akan diselenggarakan pada 21-23 Juli 2023 di Jakarta, Indonesia. Kami akan memberikan akses ke saluran Discord bagi peserta untuk saling berhubungan sekitar satu bulan sebelum acara</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
@@ -614,8 +622,8 @@
         <p class="FAQ-title" lang="en">How much does it cost?</p>
         <p class="FAQ-title" lang="id">Berapa harga berpartisipasi?</p>
         <div class="FAQ-content">
-          <p lang="en">Nothing at all!</p>
-          <p lang="id">Gratis!</p>
+          <p lang="en">Nothing at all! However, please note that meals are not covered, and travel and accommodation outside of the venue will be at the participant’s own expense</p>
+          <p lang="id">Gratis! Namun, harap diperhatikan bahwa makanan tidak ditanggung, dan perjalanan serta akomodasi di luar tempat akan ditanggung oleh peserta sendiri</p>
         </div>
       </button>
     </div>
@@ -645,19 +653,35 @@
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
-        <p class="FAQ-title" lang="en">What is the finalist round?</p>
-        <p class="FAQ-title" lang="id">Apa babak finalis?</p>
-        <div class="FAQ-content">
-          <p lang="en">The top 3 hacks for each project track (excluding pitch competition tracks) will qualify to the finalist round where each team takes another 48 hours to enhance their hacks and prepare a slide deck that they will pitch live on the Demo Day. More info included in handbook.</p>
-          <p lang="id">Untuk masing-masing dari 3 trek proyek, kami memiliki trek tanpa kode tambahan sebagai alternatif di mana peserta mengirimkan video pitch 5 menit, seperti kompetisi pitch. Satu proyek tidak dapat memenuhi syarat untuk trek kompetisi pitch dan trek reguler.</p>
-        </div>
-      </button>
-      <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">What can I make?</p>
         <p class="FAQ-title" lang="id">Apa yang bisa saya buat?</p>
         <div class="FAQ-content">
           <p lang="en">We welcome all software, hardware hacks that align with our tracks, as well as pitch videos for our pitch competition tracks.</p>
           <p lang="id">Kami menerima semua perangkat lunak, peretasan perangkat keras yang selaras dengan trek kami, serta video pitch untuk trek kompetisi pitch.</p>
+        </div>
+      </button>
+      <button type="button" class=" FAQ-button" >
+        <p class="FAQ-title" lang="en">What is a career fair?</p>
+        <p class="FAQ-title" lang="id">Apa itu pameran karir?</p>
+        <div class="FAQ-content">
+          <p lang="en">Our career fair is a open-to-all event held at Universitas Pelita Harapan, held in collaboration with KarirLab. If you are looking for internships or full-time positions, this is for you!</p>
+          <p lang="id">Career fair kami adalah acara terbuka untuk semua yang diadakan di Universitas Pelita Harapan, bekerja sama dengan KarirLab. Jika Anda mencari magang atau posisi penuh waktu, ini untuk Anda!</p>
+        </div>
+      </button>
+      <button type="button" class=" FAQ-button" >
+        <p class="FAQ-title" lang="en">When will we learn about the list of companies that will be attending the career fair?</p>
+        <p class="FAQ-title" lang="id">Kapan kita akan mengetahui daftar perusahaan yang akan menghadiri pameran karir?</p>
+        <div class="FAQ-content">
+          <p lang="en">We will publish a preliminary list of companies by early July, and we will be proactively updating the list to provide you with the best experience</p>
+          <p lang="id">Kami akan menerbitkan daftar awal perusahaan pada awal Juli, dan kami akan memperbarui daftar tersebut secara proaktif untuk memberi Anda pengalaman terbaik</p>
+        </div>
+      </button>
+      <button type="button" class=" FAQ-button" >
+        <p class="FAQ-title" lang="en">What are the benefits of attending the career fair?</p>
+        <p class="FAQ-title" lang="id">Apa keuntungan mengikuti pameran karir?</p>
+        <div class="FAQ-content">
+          <p lang="en">Attending the career fair will provide access to recruiters and inspirational figures across various industries. We see this as a great chance to expand your network and learn about new opportunities!</p>
+          <p lang="id">Menghadiri pameran karir akan memberikan akses ke perekrut dan tokoh inspiratif di berbagai industri. Kami melihat ini sebagai peluang besar untuk memperluas jaringan Anda dan belajar tentang peluang baru!</p>
         </div>
       </button>
     </div>
