Added Mentor, participant, volunteer Airtable links

--- a/langswitch.html
+++ b/langswitch.html
@@ -322,30 +322,36 @@
         <p id="Ghacksdate" lang="id">26-29 Agustus 2023</p>
         <p id="Ghacksrdy" lang="en">Ready to Build the Future?</p>
         <p id="Ghacksrdy" lang="id">Siap Membangun Masa Depan?</p>
-        <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="en">
-          <img src="participant.svg" style="margin-right:6px;">
-          Register as Participant
-        </button>
-        <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="id">
-          <img src="participant.svg" style="margin-right:6px;">
-          Daftar sebagai Peserta
-        </button>
-        <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="en">
-          <img src="mentor.svg" style="margin-right:6px;">
-          Register as Member
-        </button>
-        <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="id">
-          <img src="mentor.svg" style="margin-right:6px;">
-          Daftar sebagai Mentor
-        </button>
-        <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="en">
-          <img src="heartshake.svg" style="margin-right:6px;">
-          Join us as a Sponsor
-        </button>
-        <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="id">
-          <img src="heartshake.svg" style="margin-right:6px;">
-          Daftar sebagai Sponsor
-        </button>
+        <a href="https://airtable.com/shrrNZAo4mECqKid0" target="_blank">
+          <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="en">
+            <img src="participant.svg" style="margin-right:6px;">
+            Register as Participant
+          </button>
+          <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="id">
+            <img src="participant.svg" style="margin-right:6px;">
+            Daftar sebagai Peserta
+          </button>
+        </a>
+        <a href="https://airtable.com/shr3PcTx6XUkES4st" target="_blank">
+          <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="en">
+            <img src="mentor.svg" style="margin-right:6px;">
+            Register as Mentor
+          </button>
+          <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="id">
+            <img src="mentor.svg" style="margin-right:6px;">
+            Daftar sebagai Mentor
+          </button>
+        </a>
+        <a href="https://airtable.com/shrYaNL0dMSdoElgm" target="_blank">
+          <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="en">
+            <img src="heartshake.svg" style="margin-right:6px;">
+            Join us as a Volunteer
+          </button>
+          <button type="button" class="btn red-button" style="margin-bottom:20px;width: 350px;height: 70px" lang="id">
+            <img src="heartshake.svg" style="margin-right:6px;">
+            Daftar sebagai Relawan
+          </button>
+        </a>
       </div>
       <div class="col-sm-8"></div>
   </div>
