--- a/langswitch.html
+++ b/langswitch.html
@@ -588,48 +588,48 @@
         <p class="FAQ-title" lang="en">What is a hackathon?</p>
         <p class="FAQ-title" lang="id">Apa itu hackathon?</p>
         <div class="FAQ-content">
-          <p lang="en">A hackathon is a programming competition in which competitors use technology to build innovative projects within 36 hours. There will be opportunities to win cool prizes, learn from our key-note speakers, and network with our sponsors.</p>
-          <p lang="id">Hackathon adalah kompetisi pemrograman di mana para pesaing menggunakan teknologi untuk membangun proyek inovatif dalam waktu 36 jam. Akan ada peluang untuk memenangkan hadiah keren, belajar dari pembicara utama kami, dan berjejaring dengan sponsor kami.</p>
+          <p lang="en" style="font-weight:100">A hackathon is a programming competition in which competitors use technology to build innovative projects within 36 hours. There will be opportunities to win cool prizes, learn from our key-note speakers, and network with our sponsors.</p>
+          <p lang="id" style="font-weight:100">Hackathon adalah kompetisi pemrograman di mana para pesaing menggunakan teknologi untuk membangun proyek inovatif dalam waktu 36 jam. Akan ada peluang untuk memenangkan hadiah keren, belajar dari pembicara utama kami, dan berjejaring dengan sponsor kami.</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">What is different about Garuda Hacks 4.0?</p>
         <p class="FAQ-title" lang="id">Apa bedanya dengan Garuda Hacks 4.0?</p>
         <div class="FAQ-content">
-          <p lang="en">Garuda Hacks 4.0 will merge two of our core events (hackathons and career development events) into one event. Also, as we are emerging from COVID-19, the event will be held offline in Indonesia!</p>
-          <p lang="id">Garuda Hacks 4.0 akan menggabungkan dua acara inti kami (hackathon dan acara pengembangan karir) menjadi satu acara. Selain itu, seiring dengan merebaknya COVID-19, acara ini akan diadakan secara offline di Indonesia!</p>
+          <p lang="en" style="font-weight:100">Garuda Hacks 4.0 will merge two of our core events (hackathons and career development events) into one event. Also, as we are emerging from COVID-19, the event will be held offline in Indonesia!</p>
+          <p lang="id" style="font-weight:100">Garuda Hacks 4.0 akan menggabungkan dua acara inti kami (hackathon dan acara pengembangan karir) menjadi satu acara. Selain itu, seiring dengan merebaknya COVID-19, acara ini akan diadakan secara offline di Indonesia!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">Where will it be hosted?</p>
         <p class="FAQ-title" lang="id">Di mana acara akan diadakan?</p>
         <div class="FAQ-content">
-          <p lang="en">Garuda Hacks 4.0 will be hosted on July 21-23 2023 in Jakarta, Indonesia. We will provide access to a Discord channel for participants to get in touch with each other approximately one month prior to the event</p>
-          <p lang="id">Garuda Hacks 4.0 akan diselenggarakan pada 21-23 Juli 2023 di Jakarta, Indonesia. Kami akan memberikan akses ke saluran Discord bagi peserta untuk saling berhubungan sekitar satu bulan sebelum acara</p>
+          <p lang="en" style="font-weight:100">Garuda Hacks 4.0 will be hosted on July 21-23 2023 in Jakarta, Indonesia. We will provide access to a Discord channel for participants to get in touch with each other approximately one month prior to the event</p>
+          <p lang="id" style="font-weight:100">Garuda Hacks 4.0 akan diselenggarakan pada 21-23 Juli 2023 di Jakarta, Indonesia. Kami akan memberikan akses ke saluran Discord bagi peserta untuk saling berhubungan sekitar satu bulan sebelum acara</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">Who can participate?</p>
         <p class="FAQ-title" lang="id">Siapa yang dapat berpartisipasi?</p>
         <div class="FAQ-content">
-          <p lang="en">Everyone can participate! We encourage anyone who is interested in learning more about Hackathons, programming, and the tech industry to join Garuda Hacks!</p>
-          <p lang="id">Setiap orang dapat berpartisipasi! Kami mendorong siapa pun yang tertarik untuk mempelajari lebih Ianjut tentang Hackathon, pemrograman, dan industri teknologi untuk bergabung dengan Garuda Hacks!</p>
+          <p lang="en" style="font-weight:100">Everyone can participate! We encourage anyone who is interested in learning more about Hackathons, programming, and the tech industry to join Garuda Hacks!</p>
+          <p lang="id" style="font-weight:100">Setiap orang dapat berpartisipasi! Kami mendorong siapa pun yang tertarik untuk mempelajari lebih Ianjut tentang Hackathon, pemrograman, dan industri teknologi untuk bergabung dengan Garuda Hacks!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">Do I have to know code?</p>
         <p class="FAQ-title" lang="id">Apakah saya harus tahu kode?</p>
         <div class="FAQ-content">
-          <p lang="en">Nope! You can learn along the way or team up with experienced programmers. Skills such as designing, business planning, and etc are all going to impact the projects in various ways! Also, check our new pitch competition tracks!</p>
-          <p lang="id">Tidak! Anda bisa belajar sambil jalan atau bekerja dengan programmer berpengalaman. Keterampilan seperti mendesain, perencanaan bisnis, dan lain-lain semuanya akan berdampak pada proyek dengan berbagai cara! Juga, periksa trek kompetisi nada baru kami!</p>
+          <p lang="en" style="font-weight:100">Nope! You can learn along the way or team up with experienced programmers. Skills such as designing, business planning, and etc are all going to impact the projects in various ways! Also, check our new pitch competition tracks!</p>
+          <p lang="id" style="font-weight:100">Tidak! Anda bisa belajar sambil jalan atau bekerja dengan programmer berpengalaman. Keterampilan seperti mendesain, perencanaan bisnis, dan lain-lain semuanya akan berdampak pada proyek dengan berbagai cara! Juga, periksa trek kompetisi nada baru kami!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">How much does it cost?</p>
         <p class="FAQ-title" lang="id">Berapa harga berpartisipasi?</p>
         <div class="FAQ-content">
-          <p lang="en">Nothing at all! However, please note that meals are not covered, and travel and accommodation outside of the venue will be at the participant’s own expense</p>
-          <p lang="id">Gratis! Namun, harap diperhatikan bahwa makanan tidak ditanggung, dan perjalanan serta akomodasi di luar tempat akan ditanggung oleh peserta sendiri</p>
+          <p lang="en" style="font-weight:100">Nothing at all! However, please note that meals are not covered, and travel and accommodation outside of the venue will be at the participant’s own expense</p>
+          <p lang="id" style="font-weight:100">Gratis! Namun, harap diperhatikan bahwa makanan tidak ditanggung, dan perjalanan serta akomodasi di luar tempat akan ditanggung oleh peserta sendiri</p>
         </div>
       </button>
     </div>
@@ -638,56 +638,56 @@
         <p class="FAQ-title" lang="en">How do I apply?</p>
         <p class="FAQ-title" lang="id">Bagaimana cara mendaftar?</p>
         <div class="FAQ-content">
-          <p lang="en">You can apply as an individual or as a team (up to 4 participants max). If in any case, you are looking for team members, you can form teams with other participating hackers at the beginning of our event. Don’t worry, we will help you pair up with other hackers!</p>
-          <p lang="id">Anda dapat mendaftar sebagai individu atau sebagai tim (hingga maksimal 4 peserta). Jika Anda mencari anggota tim, Anda dapat membentuk tim dengan peretas lain yang berpartisipasi di awal acara kami. Jangan khawatir, kami akan membantu Anda berpasangan dengan peretas lain!</p>
+          <p lang="en" style="font-weight:100">You can apply as an individual or as a team (up to 4 participants max). If in any case, you are looking for team members, you can form teams with other participating hackers at the beginning of our event. Don’t worry, we will help you pair up with other hackers!</p>
+          <p lang="id" style="font-weight:100">Anda dapat mendaftar sebagai individu atau sebagai tim (hingga maksimal 4 peserta). Jika Anda mencari anggota tim, Anda dapat membentuk tim dengan peretas lain yang berpartisipasi di awal acara kami. Jangan khawatir, kami akan membantu Anda berpasangan dengan peretas lain!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">How do we submit our projects?</p>
         <p class="FAQ-title" lang="id">Bagaimana cara kirim proyek saya?</p>
         <div class="FAQ-content">
-          <p lang="en">You must submit your project's video demonstration through Devpost. Additionally, it is optional for you to submit your project's live website too.</p>
-          <p lang="id">Anda harus mengirimkan demonstrasi video proyek Anda melalui Devpost. Selain itu, Anda juga opsional untuk mengirimkan situs web langsung proyek Anda.</p>
+          <p lang="en" style="font-weight:100">You must submit your project's video demonstration through Devpost. Additionally, it is optional for you to submit your project's live website too.</p>
+          <p lang="id" style="font-weight:100">Anda harus mengirimkan demonstrasi video proyek Anda melalui Devpost. Selain itu, Anda juga opsional untuk mengirimkan situs web langsung proyek Anda.</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">What are the pitch tracks?</p>
         <p class="FAQ-title" lang="id">Apa trek nadanya?</p>
         <div class="FAQ-content">
-          <p lang="en">For each of the 3 project tracks, we have additional no-code tracks as alternatives where participants submit a 5-minute pitch video, much like a pitch competition. One project cannot qualify for both a pitch competition track and a regular track. More info is included in the handbook.</p>
-          <p lang="id">Untuk masing-masing dari 3 trek proyek, kami memiliki trek tanpa kode tambahan sebagai alternatif di mana peserta mengirimkan video pitch 5 menit, seperti kompetisi pitch. Satu proyek tidak dapat memenuhi syarat untuk trek kompetisi pitch dan trek reguler.</p>
+          <p lang="en" style="font-weight:100">For each of the 3 project tracks, we have additional no-code tracks as alternatives where participants submit a 5-minute pitch video, much like a pitch competition. One project cannot qualify for both a pitch competition track and a regular track. More info is included in the handbook.</p>
+          <p lang="id" style="font-weight:100">Untuk masing-masing dari 3 trek proyek, kami memiliki trek tanpa kode tambahan sebagai alternatif di mana peserta mengirimkan video pitch 5 menit, seperti kompetisi pitch. Satu proyek tidak dapat memenuhi syarat untuk trek kompetisi pitch dan trek reguler.</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">What can I make?</p>
         <p class="FAQ-title" lang="id">Apa yang bisa saya buat?</p>
         <div class="FAQ-content">
-          <p lang="en">We welcome all software, hardware hacks that align with our tracks, as well as pitch videos for our pitch competition tracks.</p>
-          <p lang="id">Kami menerima semua perangkat lunak, peretasan perangkat keras yang selaras dengan trek kami, serta video pitch untuk trek kompetisi pitch.</p>
+          <p lang="en" style="font-weight:100">We welcome all software, hardware hacks that align with our tracks, as well as pitch videos for our pitch competition tracks.</p>
+          <p lang="id" style="font-weight:100">Kami menerima semua perangkat lunak, peretasan perangkat keras yang selaras dengan trek kami, serta video pitch untuk trek kompetisi pitch.</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">What is a career fair?</p>
         <p class="FAQ-title" lang="id">Apa itu pameran karir?</p>
         <div class="FAQ-content">
-          <p lang="en">Our career fair is a open-to-all event held at Universitas Pelita Harapan, held in collaboration with KarirLab. If you are looking for internships or full-time positions, this is for you!</p>
-          <p lang="id">Career fair kami adalah acara terbuka untuk semua yang diadakan di Universitas Pelita Harapan, bekerja sama dengan KarirLab. Jika Anda mencari magang atau posisi penuh waktu, ini untuk Anda!</p>
+          <p lang="en" style="font-weight:100">Our career fair is a open-to-all event held at Universitas Pelita Harapan, held in collaboration with KarirLab. If you are looking for internships or full-time positions, this is for you!</p>
+          <p lang="id" style="font-weight:100">Career fair kami adalah acara terbuka untuk semua yang diadakan di Universitas Pelita Harapan, bekerja sama dengan KarirLab. Jika Anda mencari magang atau posisi penuh waktu, ini untuk Anda!</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">When will we learn about the list of companies that will be attending the career fair?</p>
         <p class="FAQ-title" lang="id">Kapan kita akan mengetahui daftar perusahaan yang akan menghadiri pameran karir?</p>
         <div class="FAQ-content">
-          <p lang="en">We will publish a preliminary list of companies by early July, and we will be proactively updating the list to provide you with the best experience</p>
-          <p lang="id">Kami akan menerbitkan daftar awal perusahaan pada awal Juli, dan kami akan memperbarui daftar tersebut secara proaktif untuk memberi Anda pengalaman terbaik</p>
+          <p lang="en" style="font-weight:100">We will publish a preliminary list of companies by early July, and we will be proactively updating the list to provide you with the best experience</p>
+          <p lang="id" style="font-weight:100">Kami akan menerbitkan daftar awal perusahaan pada awal Juli, dan kami akan memperbarui daftar tersebut secara proaktif untuk memberi Anda pengalaman terbaik</p>
         </div>
       </button>
       <button type="button" class=" FAQ-button" >
         <p class="FAQ-title" lang="en">What are the benefits of attending the career fair?</p>
         <p class="FAQ-title" lang="id">Apa keuntungan mengikuti pameran karir?</p>
         <div class="FAQ-content">
-          <p lang="en">Attending the career fair will provide access to recruiters and inspirational figures across various industries. We see this as a great chance to expand your network and learn about new opportunities!</p>
-          <p lang="id">Menghadiri pameran karir akan memberikan akses ke perekrut dan tokoh inspiratif di berbagai industri. Kami melihat ini sebagai peluang besar untuk memperluas jaringan Anda dan belajar tentang peluang baru!</p>
+          <p lang="en" style="font-weight:100">Attending the career fair will provide access to recruiters and inspirational figures across various industries. We see this as a great chance to expand your network and learn about new opportunities!</p>
+          <p lang="id" style="font-weight:100">Menghadiri pameran karir akan memberikan akses ke perekrut dan tokoh inspiratif di berbagai industri. Kami melihat ini sebagai peluang besar untuk memperluas jaringan Anda dan belajar tentang peluang baru!</p>
         </div>
       </button>
     </div>
