--- a/langswitch.html
+++ b/langswitch.html
@@ -26,7 +26,7 @@
       $(window).scroll(function(){
         var blur = 10 * Math.atan(0.005 * $(window).scrollTop())
         $("#bg1,#bg2,#bg3,#bg4,#bg5").css("-webkit-filter","blur("+blur+"px)")
-      })
+      }) <!--i have no idea how he thought of this-->
     })
   </script>
   <link rel="icon" type="image/png" href="logo.png">
