--- a/langswitch.html
+++ b/langswitch.html
@@ -451,6 +451,7 @@
   </div>
   <div id="about" class="container-fluid" style="width:100%;top:1100px;position:absolute;">
     <h1 id="heading-font" lang="en">About Garuda Hacks</h1>
+    <h1 id="heading-font" lang="id">Tentang Garuda Hacks</h1>
     <div class="row" style="margin-top:50px">
       <div class="container-fluid col-sm-12 red-button" style="width:85%;height: 250px;">
       <div class="row" style="text-align:center;height:100%;">
@@ -459,7 +460,8 @@
         </div>
         <div class="container-fluid col-sm-10" style="position:relative;height:100%">
           <div class="row" style="text-align:left;position:relative;margin-top:30px">
-            <p style="font-size:27px;font-weight:100;line-height:30px">We are a hackathon based off Indonesia where the world's greatest talents compete to solve the world's most &emsp;&emsp;pressing challenges using technology. We also have the largest concentration of Indonesian youth talent passionate about local issues at home. Furthermore, we are a 501c3 non-profit, driven by inspiring learning for our&emsp;&emsp; participants.</p>
+            <p style="font-size:27px;font-weight:100;line-height:30px" lang="en">We are a hackathon based off Indonesia where the world's greatest talents compete to solve the world's most &emsp;&emsp;pressing challenges using technology. We also have the largest concentration of Indonesian youth talent passionate about local issues at home. Furthermore, we are a 501c3 non-profit, driven by inspiring learning for our&emsp;&emsp; participants.</p>
+            <p style="font-size:27px;font-weight:100;line-height:30px" lang="id">Kami adalah hackathon yang berbasis di Indonesia di mana talenta terhebat dunia bersaing untuk menyelesaikan tantangan paling &emsp;&emsp;mendesak di dunia menggunakan teknologi. Kami juga memiliki konsentrasi terbesar talenta muda Indonesia yang bersemangat tentang isu-isu lokal di rumah. Selain itu, kami adalah organisasi nirlaba 501c3, didorong oleh pembelajaran yang menginspirasi untuk&emsp;&emsp; peserta.</p>
           </div>
           <div class="row" style=" padding-right:20px;">
             <div class="container-fluid col-sm-4">
@@ -469,10 +471,12 @@
                 </div>
                 <div class="container-fluid col-sm-9">
                   <div class="row">
-                    <p>36 Hours</p>
+                    <p lang="en">36 Hours</p>
+                    <p lang="id">36 Jam</p>
                   </div>
                   <div class="row">
-                    <p style="font-weight:100">Offline Hackathon</p>
+                    <p style="font-weight:100" lang="en">Offline Hackathon</p>
+                    <p style="font-weight:100" lang="id">Hackathon Offline</p>
                   </div>
                 </div>
               </div>
@@ -487,7 +491,8 @@
                     <p>400+</p>
                   </div>
                   <div class="row">
-                    <p style="font-weight:100">Projects Submitted</p>
+                    <p style="font-weight:100" lang="en">Projects Submitted</p>
+                    <p style="font-weight:100" lang="id">Proyek Yang Telah Diajukan</p>
                   </div>
                 </div>
               </div>
@@ -502,7 +507,8 @@
                     <p>30+</p>
                   </div>
                   <div class="row">
-                    <p style="font-weight:100">Prize Categories</p>
+                    <p style="font-weight:100" lang="en">Prize Categories</p>
+                    <p style="font-weight:100" lang="id">Kategori Hadiah</p>
                   </div>
                 </div>
               </div>
@@ -517,16 +523,20 @@
       <div class="container-fluid col-sm-4" style="width:33%">
         <div class="about-button" style="position:relative;margin-left: auto;margin-right:auto;z-index:3;height:100%">
           <img src="rocket.png" style="margin-top:-27.5%;width:60%">
-          <p class="about-title" style="margin-top:5%" >Our Mission</p>
-          <p class="about-content" style="font-weight:100">We create opportunities that empower young Indonesians with the motivation and skills needed to develop solutions for Indonesia’s most pressing issues. </p>
+          <p class="about-title" style="margin-top:5%" lang="en">Our Mission</p>
+          <p class="about-title" style="margin-top:5%" lang="id">Misi Kami</p>
+          <p class="about-content" style="font-weight:100" lang="en">We create opportunities that empower young Indonesians with the motivation and skills needed to develop solutions for Indonesia’s most pressing issues. </p>
+          <p class="about-content" style="font-weight:100" lang="id">Kami menciptakan peluang yang memberdayakan kaum muda Indonesia dengan motivasi dan keterampilan yang dibutuhkan untuk mengembangkan solusi bagi masalah paling mendesak di Indonesia. </p>
           <img src="line.svg" style="padding-bottom:15%;padding-top:5%">
         </div>
       </div>
       <div class="container-fluid col-sm-4" style="width:33%">
         <div class="about-button" style="position:relative;margin-left: auto;margin-right:auto;z-index:3;height:100%">
           <img src="eyebulb.png" style="margin-top:-27.5%;width:60%">
-          <p class="about-title" style="margin-top:5%" >Our Vision</p>
-          <p class="about-content" style="font-weight:100">We envision a community of future technology leaders and cultivating a culture of student entrepreneurship in Indonesia.</p>
+          <p class="about-title" style="margin-top:5%" lang="en">Our Vision</p>
+          <p class="about-title" style="margin-top:5%" lang="id">Visi Kami</p>
+          <p class="about-content" style="font-weight:100" lang="en">We envision a community of future technology leaders and cultivating a culture of student entrepreneurship in Indonesia.</p>
+          <p class="about-content" style="font-weight:100" lang="id">Kami membayangkan komunitas pemimpin teknologi masa depan dan menumbuhkan budaya kewirausahaan mahasiswa di Indonesia.</p>
           <br>
           <img src="line.svg" style="padding-bottom:15%;padding-top:2.5%">
         </div>
@@ -534,7 +544,8 @@
       <div class="container-fluid col-sm-4" style="width:33%">
         <div class="about-button" style="position:relative;margin-left: auto;margin-right:auto;z-index:3;height:100%">
           <img src="chartpaper.png" style="margin-top:-27.5%;width:60%">
-          <p class="about-title" style="margin-top:5%" >Our Past Events</p>
+          <p class="about-title" style="margin-top:5%" lang="en">Our Past Events</p>
+          <p class="about-title" style="margin-top:5%" lang="id">Kompetisi Sebelumnya</p>
           <p class="about-content" style="font-weight:100">Garuda Hacks 1.0, 2.0, 3.0 Komodo Hacks<br>Future Tech Leaders Fellowship</p>
           <br><br>
           <img src="line.svg" style="padding-bottom:15%;">
@@ -576,19 +587,24 @@
       <div class="container-fluid col-sm-1">       
       </div>
       <div class="container-fluid col-sm-2">
-        <p class="how-works-title">SIGN UP FOR</p>
+        <p class="how-works-title" lang="en">SIGN UP FOR</p>
+        <p class="how-works-title" lang="id">DAFTAR UNTUK</p>
       </div>  
       <div class="container-fluid col-sm-2">
-        <p class="how-works-title">REGISTRATION</p>
+        <p class="how-works-title" lang="en">REGISTRATION</p>
+        <p class="how-works-title" lang="id">REGISTRASI</p>
       </div>
       <div class="container-fluid col-sm-2">
-        <p class="how-works-title">INVITATION</p>
+        <p class="how-works-title" lang="en">INVITATION</p>
+        <p class="how-works-title" lang="id">UNDANGAN</p>
       </div>
       <div class="container-fluid col-sm-2">
-        <p class="how-works-title">ATTENDANCE</p>
+        <p class="how-works-title" lang="en">ATTENDANCE</p>
+        <p class="how-works-title" lang="id">KEHADIRAN</p>
       </div>
       <div class="container-fluid col-sm-2">
-        <p class="how-works-title">EVENT DATE</p>
+        <p class="how-works-title" lang="en">EVENT DATE</p>
+        <p class="how-works-title" lang="id">TANGGAL KOMPETISI</p>
       </div>
       <div class="container-fluid col-sm-1" >
       </div>
@@ -598,13 +614,16 @@
       </div>
       <div class="container-fluid col-sm-2 red-button" style="padding-top:0;padding-left:1%;width:15%;">
         <p class="how-works-li" style="font-weight: 700;color:white">Hackathon</p>
-        <p class="how-works-li" style="font-size:18px;font-weight: 300;margin-top:-3%;color:white">Automatic registration to the Speaker Series</p>
+        <p class="how-works-li" style="font-size:18px;font-weight: 300;margin-top:-3%;color:white" lang="en">Automatic registration to the Speaker Series</p>
+        <p class="how-works-li" style="font-size:18px;font-weight: 300;margin-top:-3%;color:white" lang="id">Registrasi otomatis untuk acara Speaker Series</p>
         <img src="signup.svg" style="padding-bottom:5%;width:60%;display:block;position:relative;margin:auto;">
       </div>  
       <div class="container-fluid col-sm-2 about-button about-content" style="display:flex;align-items:center;width:15%;padding:1%;font-size:18px;">
         <ul class="how-works-ul">
-          <li class="how-works-li">Registration opens on <span style="font-weight: bold ;">June 1</span></li>
-          <li class="how-works-li">Decisions will be sent via email on a rolling basis until we have enough participants</li>
+          <li class="how-works-li" lang="en">Registration opens on <span style="font-weight: bold ;">June 1</span></li>
+          <li class="how-works-li" lang="id">Pendaftaran dibuka pada tanggal <span style="font-weight: bold ;">1 Juni</span></li>
+          <li class="how-works-li" lang="en">Decisions will be sent via email on a rolling basis until we have enough participants</li>
+          <li class="how-works-li" lang="id">Keputusan akan dikirim melalui email secara bergiliran sampai peserta kami cukup</li>
         </ul>
       </div>
       <div class="container-fluid col-sm-2 about-button about-content" style="display:flex;align-items:center;width:15%;padding:1%;font-size:18px;">
